<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.onBoarding.OnBoardingFragment">

    <ImageView
        android:id="@+id/onBoarding_screen_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_space"
        android:layout_marginBottom="@dimen/large_margin"
        android:contentDescription="@string/onboard_screen_background_cd"
        android:scaleType="centerCrop"
        android:src="@drawable/on_boarding_screen_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/app_logo_margin"
        android:layout_height="@dimen/app_logo_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:contentDescription="@string/mini_app_logo"
        android:scaleType="centerCrop"
        android:src="@drawable/xchat_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/get_started_tv"
        style="@style/HeadlineText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/let_get_started"
        android:textSize="@dimen/large_heading_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />


    <TextView
        android:id="@+id/second_headline_tv"
        style="@style/LightText"
        android:layout_width="@dimen/no_space"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:text="@string/second_text_onBoarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_started_tv"
        app:layout_constraintVertical_bias="0.00999999" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/DefaultButton"
        android:layout_width="@dimen/no_space"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/second_headline_tv"
        app:layout_constraintStart_toStartOf="@+id/second_headline_tv"
        app:layout_constraintTop_toBottomOf="@+id/second_headline_tv"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/login_tv"
        style="@style/HeavyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/app_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>